1. fix display dislocation in login page; 2. fix "copyright1" not show issue at header in some pages; 3. use explode replacement split adapt to php7

--- a/css/1.css
+++ b/css/1.css
@@ -81,6 +81,7 @@ body {
 }
 
 #header h2 {
+	margin: 0 0 20px;
 	font:150% Arial;
 	color:#666;
 	padding:16px 0 0 0;
@@ -136,7 +137,7 @@ body {
 
 #header #subnav {
 	background:#4F9EC9;
-	padding:5px 7px 7px 7px;
+	padding: 5px 7px 10px 7px;
 	font:90% Verdana;
 	color:#DEEDF5;
 	border-bottom:2px solid #388CBA;
