1. change default language from en to zh_CN; 2. lnsert language data into session; 3. add error display at login.php when have some error; 4. update language file at /locale.
It may have some issues,if you fine some,please let me know.
Next I will rebuild index.php.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@ body {
     background: url(/images/login_bg.jpg) no-repeat center center;
 }
 
+.dalo_login_error {
+    margin-top: 4%;
+}
+
+.dalo_login_panel_error {
+    margin-top: 4%;
+}
+
+.dalo_login_panel {
+    margin-top: 10%;
+}
+
 .dalo_login_panel_left {
     padding-top: 20px;
     text-align: center;
@@ -16,10 +28,6 @@ body {
     padding: 0 30px 20px 30px;
 }
 
-.dalo_login_panel {
-    margin-top: 10%;
-}
-
-.dalo_login_panel_right>form>.input-group {
+.dalo_login_panel_right > form > .input-group {
     margin-bottom: 10px;
 }
