1. fix new login page background image display issue 2. create a new sql file for freeradius3: "fr3-mysql-daloradius-and-freeradius.sql" 3. add some TABLEs to file "fr3-mysql-daloradius-and-freeradius.sql" make it suitable for freeradius 4. change database ENGINE from MyISAM to InnoDB 5. temporarily removed "dictionary" codes from file config-maint-disconnect-user.php
Known issues :
1. JS __displayTooltip issue at input tag
2. issues at file /include/management/userReports.php on line 226 to 228

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(/images/login_bg.jpg) no-repeat center center;
+    background: url(../images/login_bg.jpg) no-repeat center center;
 }
 
 .dalo_login_error {
