Remove background color of search box form in header.

--- a/css/1.css
+++ b/css/1.css
@@ -53,7 +53,7 @@ body {
 #header form {
 	padding:27px 25px 20px 25px;
 	float:right;
-	background:#fff;
+	/*background:#fff;*/
 	width:160px;
 	margin:-20px -20px 0 0 !important;
 	margin:-20px -10px 0 0;
