--- a/css/1.css
+++ b/css/1.css
@@ -1,5 +1,5 @@
 body {
-	font: 78.5%/1.6em "Lucida Grande", "Lucida Sans Unicode", verdana, geneva, sans-serif;
+	font: 1em "Lucida Grande", "Lucida Sans Unicode", verdana, geneva, sans-serif;
 	word-spacing:2px;
 	color:#444;
 	margin:20px;
@@ -51,7 +51,7 @@ body {
 }
 
 #header form {
-	padding:27px 25px 20px 25px;
+	padding:27px 25px 20px 20px;
 	float:right;
 	/*background:#fff;*/
 	width:160px;
@@ -95,6 +95,24 @@ body {
 
 #header h2 a:hover {
 	border-bottom:2px solid #79B5D6;
+}
+
+#header #login_data {
+	float:right;
+	border-left:1px solid #ccc;
+	margin:0 0 0 20px;
+	padding: 0 0 0 20px;
+}
+
+#header #login_data a {
+	color:#f00;
+	text-decoration:none;
+}
+
+#header #sep {
+	float:right;
+	border-right:1px solid #ccc;
+	margin:0 0 0 0;
 }
 
 #header #nav {
