--- a/css/1.css
+++ b/css/1.css
@@ -107,11 +107,11 @@ body {
 	text-decoration:none;
 }
 
-#header #sep {
+#header .sep {
 	float:right;
 	border-right:1px solid #ccc;
-	margin:0 0 0 0;
-	padding: 0 0 0 0;
+	margin: 0;
+	padding: 0;
 	font-size: 46px;
 }
 
