--- a/css/2.css
+++ b/css/2.css
@@ -319,7 +319,8 @@ fieldset textarea {
 }
 
 fieldset input[type=text], fieldset input[type=number],
-fieldset input[type=date], fieldset select {
+fieldset input[type=date], fieldset input[type=password],
+fieldset select {
     padding: 5px;
     margin: 4px;
     border: 1px solid var(--rich-black);
@@ -338,8 +339,9 @@ fieldset input[type=date], fieldset select {
     box-sizing: content-box;
 }
 
-fieldset input[type=text]:disabled, fieldset input[type=numer]:disabled
-fieldset input[type=date]:disabled, fieldset select:disabled {
+fieldset input[type=text]:disabled, fieldset input[type=numer]:disabled,
+fieldset input[type=date]:disabled, fieldset input[type=password]:disabled,
+fieldset select:disabled {
     background-color: #eeeeee;
     border: 1px solid gray;
 }
